# HH_for_PP

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_CHECKLIST.md  DEPLOYMENT.md  Dockerfile  GITHUB_INSTRUCTIONS.md  GITHUB_SETUP.md  LICENSE  PROJECT_READY.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  aggressive_categorization.py  check_demo_ready.py  check_functionality.py  clean_skills.py  collect_professions.py  config.yaml  create_professions_catalog.py  docker-compose.yml  fill_all_domains.py  fill_empty_domains.py  final_distribution.py  fix_domains.py  main.py  optimized_parser.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
caddy/: Caddyfile
data/: hh_vacancies.db  professions_catalog.json
data/processed/: vacancies_processed.csv  vacancies_processed.parquet
data/raw/: all_vacancies_20260330_110225.json  all_vacancies_20260330_111955.json  all_vacancies_20260331_004922.json  all_vacancies_20260331_011415.json  vacancies_3DS_MAX_20260330_111501.json  vacancies_3D_визуализатор_20260330_001213.json  vacancies_AI_20260331_004922.json  vacancies_Affilate_20260329_234059.json  vacancies_Devops_20260330_153803.json  vacancies_GPT_20260330_010624.json  vacancies_LLM_20260330_105813.json  vacancies_LLM_20260330_131136.json  vacancies_LLM_20260331_004612.json  vacancies_Python_20260330_004811.json  vacancies_gemini_20260331_004723.json  vacancies_gpt_20260331_004649.json  vacancies_python_20260331_004817.json  vacancies_Администратор_продукта_20260330_110223.json  vacancies_Менеджер_продукта_20260330_110143.json  vacancies_проект_20260331_011354.json  vacancies_руководство_20260331_011410.json
data/reports/: hh_skills_stats_20260325_134819.csv  hh_skills_stats_20260325_135213.csv  hh_skills_stats_20260325_155735.csv  hh_skills_stats_20260328_004445.csv
docs/: 01-overview.md  02-architecture.md  03-file-structure.md  04-frontend.md  05-backend.md  06-database.md  07-parser.md  08-api-reference.md  09-deployment.md  10-security.md
scripts/: backup.sh  init_db.sql
src/: __init__.py  advanced_analyzer.py  analyzer.py  api_client.py  collector.py  config.py  db_cli.py  processor.py  storage.py  utils.py
tests/: __init__.py  test_analyzer.py  test_api_client.py  test_processor.py
web/: run.py  test_api.py
web/app/: __init__.py  main.py
web/static/: analytics.html  index.html
